# tree-sitter-pydoc

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-pydoc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pydoc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPydoc/: pydoc.h
bindings/swift/TreeSitterPydocTests/: TreeSitterPydocTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: result.txt  statement.txt  statement_continued.txt  statements.txt
