[package]
name = "tree-sitter-pydoc"
description = "Python Documentation Format"
version = "0.1.0"
authors = ["Hilmar Gústafsson <LiHRaM@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "pydoc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lihram/tree-sitter-pydoc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
